--- a/index.html
+++ b/index.html
@@ -75,5 +75,13 @@
         </section>
       </main>
     </div>
+    <footer>
+      <p>
+        Feito com <img src="./assets/heart.svg" alt="Coraçãozinho fofinho"> pelo
+        <a href="https://portifolio-five-jet.vercel.app/" target="_blank"
+          >Polcaronet</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
