--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             Para o recheio, leve todos os ingredientes ao fogo médio, mexendo
             bem até engrossar. Desligue, deixe esfriar e coloque dentro de um
             saco de confeiteiro com bico perle. Reserve. Coloque o chantilly
-            dentro de um saco de confeiteiro com bico pitanga e reserve
+            dentro de um saco de confeiteiro com bico pitanga e reserve.
             <br /><br />
             Para a montagem, faça um furo no centro dos cupcakes e recheie com o
             brigadeiro de café reservado. Decore as superfícies dos cupcakes com
